# rag-memo

./: .env.example  .gitignore  README.md  pyproject.toml
app/: batch_ingest.py  main.py
app/core/: config.py  models.py
app/data/test/: 关于提示异地贷款业务风险的通知.docx  关于提示异地贷款业务风险的通知.md
app/data/上海监管局/规范性文件/: 上海保监局、上海市公安局关于《上海市交强险与交通违法相联系的费率浮动标准》的公告.doc  上海保监局关于实施航运保险产品注册制改革的通知.doc  上海保监局关于开展保险专业中介机构股权信息监管工作改革试点的通知.doc  上海保险专业中介机构合规管理暂行办法.doc  上海保险分支机构高级管理人员任职资格考试管理办法.docx  上海银保监局 上海市地方金融监管局关于在上海开展信托财产查询试点的意见.doc  上海银保监局关于中国（上海）自由贸易试验区临港新片区银行业保险业监管有关事项的通知.doc  上海银保监局关于印发《上海保险专业中介机构合规管理暂行办法》的通知.doc  上海银保监局关于印发《上海市医保专属商业健康保险业务管理办法》的通知.doc  上海银保监局关于印发《上海市医保个人账户购买商业健康保险业务管理办法》的通知.doc  上海银保监局关于印发《上海自贸试验区（含新片区）保险分支机构设立、迁址、撤销备案管理办法》的通知.doc  上海银保监局关于印发《上海银行保险机构从业人员监管信息管理办法》的通知.doc  (+35 more)
app/db/: milvus.py  mysql.py
app/modules/: context.py  embedder.py  loader.py  retriever.py
app/schemas/: __init__.py
app/services/: chunker.py  context.py  embedder.py  loader.py  pipeline.py  pipeline_service.py  reranker.py  retriever.py
app/utils/: docx_to_md.py  embeddings.py  llm.py  logger.py  ocr.py  pdf_to_md.py
app/utils/doc_convert/: Makefile  __init__.py  convert_doc_to_docx.py  doc_to_md  doc_to_md.c
docker/: docker-compose.yml
paper/: FAISS_GPU_2017.md  FAISS_GPU_2017_ocr.md
scripts/: convert_doc_to_md.py  convert_faiss_pdf.py  convert_pdf_to_md.py  ingest_directory.py  test_doc_convert.py
tests/: test_pdf_to_md.py  test_pipeline.py
tests/reconstruction/: test_modular_pipeline.py
tests/tools/: check_milvus_size.py  show_file_chunks.py
utils/: docx_to_md.py
(+104 files in other folders)
