[project]
name = "rag-memo"
version = "0.1.0"
description = ""
authors = [{name = "jin"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "sse-starlette>=2.0.0",
    "python-multipart>=0.0.9",
    # LangChain
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-milvus>=0.2.0",
    "langserve>=0.3.0",
    # Vector DB & Search
    "pymilvus>=2.4.0",
    # Document parsing
    "pymupdf>=1.24.0",
    "pypdf>=4.0.0",
    "pillow>=10.0.0",
    "rapidocr-onnxruntime>=1.4.0",
    # MySQL
    "sqlalchemy>=2.0.0",
    "aiomysql>=0.2.0",
    "pymysql>=1.1.0",
    # Terminal UI & Logging
    "rich>=13.0.0",
    "loguru>=0.7.0",
    "cryptography>=42.0.0",
    "httpx[socks]>=0.28.1",
]
